fix: align customer/manager avatars with table header

--- a/src/projects/components/projectsCard/ProjectCard.scss
+++ b/src/projects/components/projectsCard/ProjectCard.scss
@@ -87,11 +87,6 @@
       display: flex;
       justify-content: space-between;
       align-items: flex-end;
-
-      .user-block {
-        /* because avatars inside list have "margin-left: -$base-unit" */
-        padding-left: $base-unit;
-      }
     }
 
     .join-btn-container {
